# vrchatapi-rust

./: Cargo.toml  configuration.patch  generate.sh  package-lock.json  two_factor.patch
examples/: online.rs
src/apis/: authentication_api.rs  avatars_api.rs  configuration.rs  economy_api.rs  favorites_api.rs  files_api.rs  friends_api.rs  instances_api.rs  invite_api.rs  mod.rs  notifications_api.rs  permissions_api.rs  playermoderation_api.rs  system_api.rs  users_api.rs  worlds_api.rs
src/models/: add_favorite_request.rs  api_config.rs  api_event_config.rs  api_health.rs  avatar.rs  avatar_unity_package_url_object.rs  create_avatar_request.rs  create_file_request.rs  create_file_version_request.rs  create_world_request.rs  current_user.rs  deployment_group.rs  developer_type.rs  download_url_list.rs  dynamic_content_row.rs  error.rs  favorite.rs  favorite_group.rs  favorite_group_visibility.rs  favorite_type.rs  file.rs  file_data.rs  file_status.rs  file_upload_url.rs  file_version.rs  file_version_upload_status.rs  finish_file_data_upload_request.rs  friend_status.rs  info_push.rs  info_push_data.rs  info_push_data_article.rs  info_push_data_article_content.rs  info_push_data_clickable.rs  instance.rs  instance_platforms.rs  instance_type.rs  invite_message.rs  invite_message_type.rs  invite_request.rs  invite_response.rs  (+45 more)
