[package]
name = "vrchatapi"
description = "VRChat API Library for Rust"
version = "1.7.2"
authors = ["OpenAPI Generator team and contributors"]
license = "MIT"
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
features = ["cookies", "json", "multipart"]

[dev-dependencies]
